[package]
name = "client-side"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.9.3"
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
tokio = { version = "*", features = ["full"] }
mini-redis = "0.4"
rcgen = "*"